# jupyter-notebook-mcp

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.speciter/: iters.json
.speciter/docs/: fastmcp.md  nbformat.md
.speciter/iterations/jupyter-notebook-mcp-server/: FINISHED.md  PLAN.md  SPEC.md
jupyter_notebook_mcp/: __init__.py  cell_ops.py  errors.py  formatting.py  markdown_codec.py  notebook_io.py  search.py  server.py  session.py
tests/: __init__.py  conftest.py  helpers.py  test_cell_editing.py  test_contract_flow.py  test_markdown_codec.py  test_phase5.py  test_search_and_formatting.py  test_session_and_io.py
