[project]
name = "jupyter-notebook-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "nbformat>=5.10.4",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[project.scripts]
jupyter-notebook-mcp = "jupyter_notebook_mcp:main"
